fixing the quote

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <h1>Welcome back, Miyu 💖</h1>
         <!-- <p class="quote static-quote">"You’ve already learned it once. You’ll do it even better this time!"</p> -->
         <!-- <p class="quote" id="anime-quote">...</p> -->
-        <div class="quote-container">
+        <div class="quote-box">
             <p class="quote static-quote">"You’ve already learned it once. You’ll do it even better this time!"</p>
-            <div class="quote" id="anime-quote"></div>
+            <p class="quote" id="anime-quote"></p>
         </div>
-
 
         <div class="countdown">
             <h2>⏳ NEET Countdown</h2>
